--- a/app/views/discovery-2023/email/reset-password.html
+++ b/app/views/discovery-2023/email/reset-password.html
@@ -8,9 +8,11 @@ Reset your password
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h2 class="nhsuk-heading-m">
+      <p>
         Subject: Reset your password
-      </h2>
+      </p>
+
+      <hr>
 
       <h2 class="nhsuk-heading-m">Reset your password</h2>
       <p class="nhsuk-body">
@@ -29,7 +31,7 @@ Reset your password
         If nothing happens when you select the button, try this link instead. You might need to copy and paste it into an internet browser:
       </p>
 
-      <p class="nhsuk-body"><a href="../create-account/spinner-set-up" target="_blank">https://access.login.nhs.uk/reset/new-password?username=AQICAHgK2tUQqSaLCFLjukY1VezjWJcqInrTxnRJHFRi6A7USwEMRV_0WrjaSyMwNyNYFlvXAAAAeDB2BgkqhkiG9w0BBwagaTBnAgEAMGIGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMpyJjsY0nMDjserVnAgEQgDUl9jNOci7-4h5NDn86yFD-d4EvteK6lLkvSwP5xeQVdG0GiUKehPeLZS_ZQCAHbfBNU3SvlA==&code=235257&expiry=1690367062181
+      <p class="nhsuk-body"><a href="../create-account/spinner-set-up" target="_blank">https://provisioning.login.nhs.uk/reset/new-password?username=AQICAHgK2tUQqSaLCFLjukY1VezjWJcqInrTxnRJHFRi6A7USwEMRV_0WrjaSyMwNyNYFlvXAAAAeDB2BgkqhkiG9w0BBwagaTBnAgEAMGIGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMpyJjsY0nMDjserVnAgEQgDUl9jNOci7-4h5NDn86yFD-d4EvteK6lLkvSwP5xeQVdG0GiUKehPeLZS_ZQCAHbfBNU3SvlA==&code=235257&expiry=1690367062181
       </a></p>
       
       
