--- a/app/views/discovery-2023/email/success-uplift.html
+++ b/app/views/discovery-2023/email/success-uplift.html
@@ -8,6 +8,12 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
+      <p>
+        Subject: You now have an NHS login
+      </p>
+
+      <hr>
+
       <h1 class="nhsuk-fieldset__legend--l">
        You now have an NHS login
       </h1>
