--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -8,16 +8,18 @@ Finish setting up your NHS login
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h2 class="nhsuk-heading-m">
+      <p>
         Subject: Finish setting up your NHS login
-      </h2>
+      </p>
+
+      <hr>
 
       <p class="nhsuk-body">
         Dear {{ data.UserFirstName or 'Alex' }} {{ data.UserLastName or 'Taylor' }},
       </p>
       
       <p class="nhsuk-body">
-        Your GP has recommended that you use the <strong>NHS App</strong>. To access it you will need an NHS login account.
+        Your GP surgery has recommended that you use the <strong>NHS App</strong>. To access it you will need an NHS login account.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
@@ -30,10 +32,7 @@ Finish setting up your NHS login
           </li>
           <li>
             order repeat prescriptions 
-          </li>
-          <li>
-            download your NHS Covid Pass for travel abroad 
-          </li>          
+          </li>       
         </ul>
       </p>
 
@@ -54,12 +53,12 @@ Finish setting up your NHS login
       {% if data.error === 'trueNow' %} 
 
       <a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://access.login.nhs.uk/finish-set-up</a></p>
+      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
 
       {% else %}
 
       <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://access.login.nhs.uk/finish-set-up</a></p>
+      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
       
       {% endif %}
 
