--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -22,7 +22,7 @@ Create a password
         <a id="summaryErrorMessageContent" href="#createPassword">Enter your password</a>
       </li>
       <li>
-        <a id="summaryErrorMessageContent" href="#confirmPassword">Enter your password</a>
+        <a id="summaryErrorMessageContent2" href="#confirmPassword">Enter your password</a>
       </li>
     </ul>
   </div>
@@ -49,7 +49,7 @@ Create a password
         </label>
         <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
         <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="createPassword-error">
-          <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
+          <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter a password</span>
         </span>
         <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
           <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field id="createPassword" name="createPassword" type="password" aria-describedby="create password">
@@ -61,13 +61,13 @@ Create a password
       </div>
           
       <!-- input 2: confirm password -->
-      <div id="formGroup">
+      <div id="formGroup2">
         <label class="nhsuk-label nhsuk-u-margin-top-3" for="confirmPassword">
             Confirm password
           </label>
           <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
-          <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="confirmPassword-error">
-            <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
+          <span id="errorMessageContainer2" class="nhsuk-error-message" style="display: none;">
+            <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent2">Enter a password</span>
           </span>
           <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
         <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field-confirm id="confirmPassword" name="confirmPassword" type="password" aria-describedby="confirm password">
@@ -121,117 +121,146 @@ Create a password
 
   // create password
 
-  document.querySelector("#createPassword").addEventListener("change",function(e) {
-    inlineValidation();
-  })
-
   function showErrorSummary(errorMessage) {
     var errorSummary = document.querySelector("#errorSummary").style.display = "block";
     if(errorMessage) {
       var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = errorMessage;
+      document.querySelector("#summaryErrorMessageContent").style.display = "block";
     }
     else {
       var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = "default error message";
+      
     }
-    
+  }
+
+  function showErrorSummary2(errorMessage) {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "block";
+    if(errorMessage) {
+      var summaryErrorMessageContent2 = document.querySelector("#summaryErrorMessageContent2").textContent = errorMessage;
+      document.querySelector("#summaryErrorMessageContent2").style.display = "block";
+    }
+    else {
+      var summaryErrorMessageContent2 = document.querySelector("#summaryErrorMessageContent2").textContent = "default error message";
+    }
+  }
+
+  function hideErrorSummaryContainer() {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "none";
   }
 
   function hideErrorSummary() {
     var errorSummary = document.querySelector("#errorSummary").style.display = "none";
+    document.querySelector("#summaryErrorMessageContent").style.display = "none";
+  }
+
+  function hideErrorSummary2() {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "none";
+    document.querySelector("#summaryErrorMessageContent2").style.display = "none";
   }
 
   function showInputError(errorMessage) {
+    // vars for input 1: create pass
     var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
     var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
     var inputError = document.querySelector("#createPassword").classList.add("nhsuk-input--error");
+    
 
     if(errorMessage) {
+      // vars for input 1: create pass
       var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
     }
 
     else {
+      // vars for input 1: create pass
       var errorMessageContent = document.querySelector("#errorMessageContent").textContent = "default error message";
     }
   }
 
+  function showInputError2(errorMessage) {
+    // vars for input 2: confirm pass
+    var formGroup2 = document.querySelector("#formGroup2").classList.add("nhsuk-form-group--error");
+    var errorMessageContainer2 = document.querySelector("#errorMessageContainer2").style.display = "block";
+    var inputError2 = document.querySelector("#confirmPassword").classList.add("nhsuk-input--error");
+
+    if(errorMessage) {
+      // vars for input 2: confirm pass
+      var errorMessageContent2 = document.querySelector("#errorMessageContent2").textContent = errorMessage;
+    }
+
+    else {
+      // vars for input 2: confirm pass
+      var errorMessageContent2 = document.querySelector("#errorMessageContent2").textContent = "default error message";
+    }
+  }
+
   function hideInputError() {
+    // vars for input 1: create pass
     var formGroup = document.querySelector("#formGroup").classList.remove("nhsuk-form-group--error");
     var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "none";
+    var inputError = document.querySelector("#createPassword").classList.remove("nhsuk-input--error");
+  }
+
+  function hideInputError2() {
+    // vars for input 2: confirm pass 
+    var formGroup2 = document.querySelector("#formGroup2").classList.remove("nhsuk-form-group--error");
+    var errorMessageContainer2 = document.querySelector("#errorMessageContainer2").style.display = "none";
+    var inputError = document.querySelector("#confirmPassword").classList.remove("nhsuk-input--error");
   }
 
   function inlineValidation() {
+    hideInputError();
+    hideInputError2();
+    hideErrorSummaryContainer();
+    hideErrorSummary();
+    hideErrorSummary2();
+
     var inputValue = document.querySelector("#createPassword").value;
+    var inputValue2 = document.querySelector("#confirmPassword").value;
+
+    if(inputValue.length === 0 && inputValue2.length === 0) {
+      showErrorSummary("You need to enter a password");
+      showInputError("You need to enter a password");
+      showErrorSummary2("Enter your password again to confirm it");
+      showInputError2("Enter your password again to confirm it");
+      return false;
+    }
+
+    if(inputValue.length === 0 && inputValue2.length > 0) {
+      showErrorSummary("You need to enter a password");
+      showInputError("You need to enter a password");
+      showErrorSummary2("Enter your password again to confirm it");
+      showInputError2("Enter your password again to confirm it");
+      return false;   
+    }
+
+    if(inputValue.length < 8 && inputValue.length > 0) {
+      showErrorSummary("Enter the password in the correct format");
+      showInputError("Enter the password in the correct format");
+      showErrorSummary2("Enter your password again to confirm it");
+      showInputError2("Enter your password again to confirm it");
+      return false;
+    }
+
+    if(inputValue.length === 8 && inputValue.length > 0 && inputValue2.length === 0 ) {
+      showErrorSummary2("Enter your password again to confirm it");
+      showInputError2("Enter your password again to confirm it");
+      return false;
+    }
+
+    if(inputValue.length === 8 && inputValue.length > 0 && inputValue2.length > 0 && inputValue2.length < 8) {
+      showErrorSummary2("Enter your password again to confirm it and make sure they match");
+      showInputError2("Enter your password again to confirm it and make sure they match");
+      return false;
+    }
+
+    if(inputValue.length < 8 && inputValue.length > 0 && inputValue2.length > 0 && inputValue2.length < 8 && inputValue === inputValue2) {
+      showErrorSummary("Enter the password in the correct format");
+      showInputError("Enter the password in the correct format");
+      showErrorSummary2("Enter your password again to confirm it");
+      showInputError2("Enter your password again to confirm it");
+      return false;  
+    }
     
-    if(inputValue.length === 0) {
-      showErrorSummary("Enter your password");
-      showInputError("Enter your password");
-      return false;
-    }
-
-    if(inputValue !== "password") {
-      showErrorSummary("Enter the correct password");
-      showInputError("Enter the correct password");
-      return false;
-    }
-
-    return true;
-  }
-
-  // confirm password
-
-  document.querySelector("#confirmPassword").addEventListener("change",function(e) {
-    inlineValidation();
-  })
-
-  function showErrorSummary(errorMessage) {
-    var errorSummary = document.querySelector("#errorSummary").style.display = "block";
-    if(errorMessage) {
-      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = errorMessage;
-    }
-    else {
-      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = "default error message";
-    }
-    
-  }
-
-  function hideErrorSummary() {
-    var errorSummary = document.querySelector("#errorSummary").style.display = "none";
-  }
-
-  function showInputError(errorMessage) {
-    var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
-    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
-    var inputError = document.querySelector("#confirmPassword").classList.add("nhsuk-input--error");
-
-    if(errorMessage) {
-      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
-    }
-
-    else {
-      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = "default error message";
-    }
-  }
-
-  function hideInputError() {
-    var formGroup = document.querySelector("#formGroup").classList.remove("nhsuk-form-group--error");
-    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "none";
-  }
-
-  function inlineValidation() {
-    var inputValue = document.querySelector("#confirmPassword").value;
-    
-    if(inputValue.length === 0) {
-      showErrorSummary("Enter your password");
-      showInputError("Enter your password");
-      return false;
-    }
-
-    if(inputValue !== "password") {
-      showErrorSummary("Enter the correct password");
-      showInputError("Enter the correct password");
-      return false;
-    }
-
     return true;
   }
 
