--- a/app/views/discovery-2023/error/generic.html
+++ b/app/views/discovery-2023/error/generic.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-NHS login – Error
+Something went wrong
 {% endblock %}
 
 
@@ -12,7 +12,7 @@ NHS login – Error
 
       <h1>Something went wrong</h1>  
 
-      <p>We are having technical problems. Try again later.</p>    
+      <p>We are having technical problems. Try using the link in the email again.</p>    
 
       <p>Reference: <b>CID1101</b></p>
 
