Update email routing
Update email routing to new create-user folder

--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -52,13 +52,13 @@ Finish setting up your NHS login
 
       {% if data.error === 'trueNow' %} 
 
-      <a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
+      <a href="../check-user/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../check-user/spinner-set-up?error=trueNow" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
 
       {% else %}
 
-      <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
+      <a href="../check-user/spinner-set-up.html" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../check-user/spinner-set-up" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
       
       {% endif %}
 
